--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.lo
 *.o
 *.obj
+*.user
 
 # Precompiled Headers
 *.gch
@@ -15,6 +16,7 @@
 *.so
 *.dylib
 *.dll
+*.vs
 
 # Fortran module files
 *.mod
@@ -30,3 +32,7 @@
 *.exe
 *.out
 *.app
+
+# Debug
+Debug
+Release
