--- a/LeeCodeProj/WaterProblem/WaterProblem.vcxproj.filters
+++ b/LeeCodeProj/WaterProblem/WaterProblem.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="include">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="src">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
@@ -56,10 +52,17 @@
     <ClCompile Include="189Rotate.cpp">
       <Filter>Array</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Anagram.h">
-      <Filter>include</Filter>
-    </ClInclude>
+    <ClCompile Include="118PascalTriangle.cpp">
+      <Filter>Array</Filter>
+    </ClCompile>
+    <ClCompile Include="119PascalTriangleII.cpp">
+      <Filter>Array</Filter>
+    </ClCompile>
+    <ClCompile Include="169majorityElement.cpp">
+      <Filter>Array</Filter>
+    </ClCompile>
+    <ClCompile Include="229majorityElement.cpp">
+      <Filter>Array</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
