上传最近做的题目
https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x6w3ds/

--- a/LeeCodeProj/BinarySearch/BinarySearch.vcxproj
+++ b/LeeCodeProj/BinarySearch/BinarySearch.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="278firstBadVersion.cpp" />
     <ClCompile Include="35SearchInsert.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
