--- a/LeeCodeProj/WaterProblem/WaterProblem.vcxproj.filters
+++ b/LeeCodeProj/WaterProblem/WaterProblem.vcxproj.filters
@@ -76,5 +76,8 @@
     <ClCompile Include="firstUniqChar.cpp">
       <Filter>Array</Filter>
     </ClCompile>
+    <ClCompile Include="575distributeCandies.cpp">
+      <Filter>Array</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
