完成每日打卡 237 链表简单删除

--- a/LeeCodeProj/LinkList/链表.vcxproj.filters
+++ b/LeeCodeProj/LinkList/链表.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="面试题0202kthToLast.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="237deleteNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="define.h">
