[MOD] 整理二叉树工程

--- a/LeeCodeProj/BinaryTree/BinaryTree.vcxproj
+++ b/LeeCodeProj/BinaryTree/BinaryTree.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="101isSymmetric.cpp" />
     <ClCompile Include="104MaxDepth.cpp" />
     <ClCompile Include="112hasPathSun.cpp" />
+    <ClCompile Include="define.h" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
