[ADD]完成100题，相同的树。二叉树简单题，递归或者非递归遍历二叉树

--- a/LeeCodeProj/BinaryTree/BinaryTree.vcxproj
+++ b/LeeCodeProj/BinaryTree/BinaryTree.vcxproj
@@ -116,9 +116,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="100isSameTree.cpp" />
     <ClCompile Include="101isSymmetric.cpp" />
     <ClCompile Include="104MaxDepth.cpp" />
     <ClCompile Include="112hasPathSun.cpp" />
+    <ClCompile Include="94inorderTraversal.cpp" />
     <ClCompile Include="define.h" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
