--- a/LeeCodeProj/BinaryTree/BinaryTree.vcxproj.filters
+++ b/LeeCodeProj/BinaryTree/BinaryTree.vcxproj.filters
@@ -14,6 +14,12 @@
     <ClCompile Include="define.h">
       <Filter>include</Filter>
     </ClCompile>
+    <ClCompile Include="94inorderTraversal.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="100isSameTree.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
